--- a/.github/workflows/sync-testnets.yml
+++ b/.github/workflows/sync-testnets.yml
@@ -141,6 +141,14 @@ jobs:
           done
           echo "Node is synced."
           
+      - name: Get Current Job Log URL
+        uses: Tiryoh/gha-jobid-action@v0
+        if: failure() && steps.wait.conclusion == 'failure'
+        id: jobs
+        with:
+          github_token: ${{ secrets.REPOSITORY_DISPATCH_TOKEN }}
+          job_name: ${{ github.job }}
+          
       - name: Send Slack Notification on failure
         if: failure() && steps.wait.conclusion == 'failure'
         uses: slackapi/slack-github-action@v1.24.0
@@ -160,7 +168,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "*Chain:* ${{ matrix.network }}\n*URL:* [View Run Details](https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }})\n*Failure Reason:* Waiting for Forkchoice message found in Docker logs."
+                    "text": "*Chain:* ${{ matrix.network }}\n*URL:* ${{ steps.jobs.outputs.html_url }}\n*Failure Reason:* Waiting for Forkchoice message found in Docker logs."
                   }
                 },
                 {
