--- a/.github/workflows/sync-testnets.yml
+++ b/.github/workflows/sync-testnets.yml
@@ -141,45 +141,35 @@ jobs:
           done
           echo "Node is synced."
           
-      - name: Get Current Job Log URL
-        uses: Tiryoh/gha-jobid-action@v1.1.0
-        if: failure() && steps.wait.conclusion == 'failure'
-        id: jobs
-        with:
-          github_token: ${{ secrets.REPOSITORY_DISPATCH_TOKEN }}
-          job_name: ${{ github.job }}
-          
-      - name: Send Slack Notification on failure
-        if: failure() && steps.wait.conclusion == 'failure'
+      - name: Send Slack Notification on failure or cancellation
+        if: steps.wait.conclusion == 'failure' || steps.wait.conclusion == 'cancelled'
         uses: slackapi/slack-github-action@v1.24.0
         with:
           payload: |
             {
-              "text": "Sync Failure Notification",
+              "text": "Sync Notification",
               "blocks": [
                 {
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "🚨 Sync Failure Detected 🚨"
+                    "text": "🚨 Sync ${ steps.wait.conclusion == 'failure' ? 'Failure' : 'Cancellation' } Detected 🚨"
                   }
                 },
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "*Chain:* ${{ matrix.network }}\n*URL:* ${{ steps.jobs.outputs.html_url }}\n*Failure Reason:* Waiting for Forkchoice message found in Docker logs."
+                    "text": "*Chain:* ${{ matrix.network }}\n*URL:* https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}\n*Status:* ${ steps.wait.conclusion == 'failure' ? ('Failure Reason: \\'${{ steps.wait.outputs.bad_log }}\\' found in Docker logs.') : 'The job was cancelled because of timeout' }"
                   }
                 },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*Line on which it was found:*\n`${{ steps.wait.outputs.failure_line }}`"
-                  }
+                ${
+                  steps.wait.conclusion == 'failure' ?
+                  '"type": "section",\n"text": {\n"type": "mrkdwn",\n"text": "*Line on which it was found:*\n`${{ steps.wait.outputs.failure_line }}`"\n},' : ''
                 }
               ]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      
