--- a/.github/workflows/nethermind-tests.yml
+++ b/.github/workflows/nethermind-tests.yml
@@ -33,7 +33,7 @@ jobs:
       matrix:
         project:
           - Nethermind.Abi.Test
-          - Nethermind.AccountAbstraction.Test
+          # - Nethermind.AccountAbstraction.Test
           - Nethermind.Api.Test
           - Nethermind.AuRa.Test
           - Nethermind.Blockchain.Test
@@ -55,7 +55,7 @@ jobs:
           - Nethermind.Logging.NLog.Test
           - Nethermind.Merge.AuRa.Test
           - Nethermind.Merge.Plugin.Test
-          - Nethermind.Mev.Test
+          # - Nethermind.Mev.Test
           - Nethermind.Mining.Test
           - Nethermind.Monitoring.Test
           - Nethermind.Network.Discovery.Test
