--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -44,22 +44,27 @@ jobs:
           # This hack must be removed once we reach the v2
           echo $VERSION > ver
           fixed_version=$(awk -F. '{ print $1"."$2$3$4"0"}' ver)
-          changelog="nethermind ($fixed_version) jammy; urgency=high\n"
-          changelog+="  * Nethermind v$VERSION\n"
-          changelog+=" -- Nethermind <devops@nethermind.io>  $(date -R)"
-          echo -e "$changelog" > debian/changelog
-          debuild -S -uc -us
-          cd ..
-          debsign -p "gpg --batch --yes --no-tty --pinentry-mode loopback --passphrase-file $GITHUB_WORKSPACE/PASSPHRASE" -S -k$PPA_GPG_KEYID nethermind_${fixed_version}_source.changes
-          dput -f ppa:nethermindeth/nethermind nethermind_${fixed_version}_source.changes
+
+          for release in "jammy" "focal" "mantic"
+          do
+            changelog="nethermind ($fixed_version) $release; urgency=high\n"
+            changelog+="  * Nethermind v$VERSION\n"
+            changelog+=" -- Nethermind <devops@nethermind.io>  $(date -R)"
+            echo -e "$changelog" > debian/changelog
+            debuild -S -uc -us
+            cd ..
+            debsign -p "gpg --batch --yes --no-tty --pinentry-mode loopback --passphrase-file $GITHUB_WORKSPACE/PASSPHRASE" -S -k$PPA_GPG_KEYID nethermind_${fixed_version}_source.changes
+            dput -f ppa:nethermindeth/nethermind nethermind_${fixed_version}_source.changes
+          done
+
 
   copy-ppa:
     name: Copy PPA package
     runs-on: ubuntu-latest
     needs: publish-ppa
     steps:
-      - name: Wait for 1 hour
-        run: sleep 1h
+      - name: Wait for 1.5 hours
+        run: sleep 1.5h
       - name: Install PPA dependencies
         run: |
           sudo apt-get update
