--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -55,34 +55,8 @@ jobs:
             cd ..
             debsign -p "gpg --batch --yes --no-tty --pinentry-mode loopback --passphrase-file $GITHUB_WORKSPACE/PASSPHRASE" -S -k$PPA_GPG_KEYID nethermind_${fixed_version}_source.changes
             dput -f ppa:nethermindeth/nethermind nethermind_${fixed_version}_source.changes
+            cd deployment
           done
-
-
-  copy-ppa:
-    name: Copy PPA package
-    runs-on: ubuntu-latest
-    needs: publish-ppa
-    steps:
-      - name: Wait for 1.5 hours
-        run: sleep 1.5h
-      - name: Install PPA dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install debhelper devscripts ubuntu-dev-tools -y
-      - name: Install launchpadlib
-        run: pip install launchpadlib --upgrade
-      - name: Copy to other Ubuntu releases
-        env:
-          LP_CREDENTIALS_FILE: /tmp/lp_credentials
-        run: |
-          echo ${{ secrets.PPA_COPY_TOKEN }} | base64 --decode > /tmp/lp_credentials
-          git clone https://git.launchpad.net/ubuntu-archive-tools
-          cd ubuntu-archive-tools
-          for release in "focal" "mantic"
-          do
-            python3 copy-package -y -b -p nethermindeth --ppa-name=nethermind -s jammy --to-suite=$release nethermind
-          done
-          rm -f /tmp/lp_credentials
 
   publish-winget:
     name: Publish on Windows Package Manager
