--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -1,27 +1,17 @@
 name: Publish packages
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [fix/ppa-copy-delay]
 
 jobs:
-  wait:
-    name: Wait for assets
-    runs-on: ubuntu-latest
-    if: ${{ !github.event.release.prerelease }}
-    steps:
-      - name: Wait to ensure assets are uploaded
-        run: sleep 5m
 
   publish-ppa:
     name: Publish on PPA
     runs-on: ubuntu-latest
-    needs: wait
     steps:
       - name: Check out Nethermind repository
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.release.tag_name }}
       - name: Set up GPG
         env:
           GPG_PASSPHRASE: ${{ secrets.PPA_GPG_PASSPHRASE }}
@@ -38,7 +28,7 @@ jobs:
       - name: Submit package
         env:
           PPA_GPG_KEYID: ${{ secrets.PPA_GPG_KEYID }}
-          VERSION: ${{ github.event.release.tag_name }}
+          VERSION: 1.25.3
         working-directory: scripts/deployment
         run: |
           # This hack must be removed once we reach the v2
@@ -54,56 +44,7 @@ jobs:
             debuild -S -uc -us
             cd ..
             debsign -p "gpg --batch --yes --no-tty --pinentry-mode loopback --passphrase-file $GITHUB_WORKSPACE/PASSPHRASE" -S -k$PPA_GPG_KEYID nethermind_${fixed_version}_source.changes
-            dput -f ppa:nethermindeth/nethermind nethermind_${fixed_version}_source.changes
+            #dput -f ppa:nethermindeth/nethermind nethermind_${fixed_version}_source.changes
             cd deployment
           done
 
-  publish-winget:
-    name: Publish on Windows Package Manager
-    runs-on: windows-latest
-    needs: wait
-    steps:
-      - name: Submit package
-        run: |
-          $releaseInfo = curl -s ${{ github.event.release.assets_url }} | ConvertFrom-Json
-          $releaseUrl = $releaseInfo | Where-Object -Property name -match 'windows' | Select -ExpandProperty browser_download_url
-          curl -sL https://aka.ms/wingetcreate/latest -o wingetcreate.exe
-          ./wingetcreate update Nethermind.Nethermind -s -v ${{ github.event.release.tag_name }} -u $releaseUrl -t ${{ secrets.WINGET_TOKEN }}
-
-  publish-homebrew:
-    name: Publish on Homebrew
-    runs-on: ubuntu-latest
-    needs: wait
-    env:
-      FORMULA: nethermind.rb
-    steps:
-      - name: Check out homebrew-nethermind repository
-        uses: actions/checkout@v4
-        with:
-          repository: NethermindEth/homebrew-nethermind
-          token: ${{ secrets.REPOSITORY_DISPATCH_TOKEN }}
-      - name: Update formula file
-        run: |
-          json=$(curl -s ${{ github.event.release.assets_url }})
-          macos_x64_url=$(echo "$json" | jq -r '.[].browser_download_url | select(contains("macos-x64"))')
-          macos_x64_hash=$(curl -sL $macos_x64_url | shasum -a 256 | awk '{print $1}')
-          macos_arm64_url=$(echo "$json" | jq -r '.[].browser_download_url | select(contains("macos-arm64"))')
-          macos_arm64_hash=$(curl -sL $macos_arm64_url | shasum -a 256 | awk '{print $1}')
-          sed -i "s/version .*/version \"${{ github.event.release.tag_name }}\"/" $FORMULA
-          awk -i inplace -v n=1 '/url/ { if (++count == n) sub(/url.*/, "url \"'$macos_x64_url'\""); } 1' $FORMULA
-          awk -i inplace -v n=2 '/url/ { if (++count == n) sub(/url.*/, "url \"'$macos_arm64_url'\""); } 1' $FORMULA
-          awk -i inplace -v n=1 '/sha256/ { if (++count == n) sub(/sha256.*/, "sha256 \"'$macos_x64_hash'\""); } 1' $FORMULA
-          awk -i inplace -v n=2 '/sha256/ { if (++count == n) sub(/sha256.*/, "sha256 \"'$macos_arm64_hash'\""); } 1' $FORMULA
-      - name: Submit package
-        env:
-          GH_TOKEN: ${{ secrets.REPOSITORY_DISPATCH_TOKEN }}
-        run: |
-          head_branch=feature/v${{ github.event.release.tag_name }}-${{ github.run_number }}-${{ github.run_attempt }}
-          message="Update for v${{ github.event.release.tag_name }}"
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git checkout -b $head_branch
-          git add $FORMULA
-          git commit -am "$message"
-          git push origin $head_branch
-          gh pr create -B main -H $head_branch -t "$message" -b "Auto-updated Homebrew formula for Nethermind v${{ github.event.release.tag_name }}"
